choose-mirror (2.24) UNRELEASED; urgency=low

  * Patch by Matthias Klose stolen from Ubuntu (closes: #468623):
    - iso3166tab.py: Include ErrorPrinter and DefaultHandler from obsolete
      saxutils.py
    - drop build dependency on python-xml
  * Remove PREFERRED_DISTRIBUTION; has been replaced by /etc/default_release.

 -- Frans Pop <fjp@debian.org>  Mon, 17 Mar 2008 00:19:16 +0100

choose-mirror (2.23) unstable; urgency=low

  * Rebuilt using updated Mirrors.masterlist which now includes official
    armel mirrors.

 -- Joey Hess <joeyh@debian.org>  Fri, 15 Feb 2008 16:59:49 -0500

choose-mirror (2.22) unstable; urgency=low

  [ Updated translations ]
  * Finnish (fi.po) by Esko Arajärvi
  * French (fr.po) by Christian Perrier
  * Hindi (hi.po) by Kumar Appaiah
  * Indonesian (id.po) by Arief S Fitrianto
  * Korean (ko.po) by Changwoo Ryu
  * Latvian (lv.po) by Viesturs Zarins
  * Portuguese (Brazil) (pt_BR.po) by Felipe Augusto van de Wiel (faw)
  * Turkish (tr.po) by Recai Oktaş
  * Traditional Chinese (zh_TW.po) by Tetralet

 -- Otavio Salvador <otavio@debian.org>  Fri, 15 Feb 2008 07:49:33 -0200

choose-mirror (2.21) unstable; urgency=low

  * If built from a clean VCS checkout, Mirrors.masterlist was not present
    when the source package was built, and so was not included in the source
    package, and so has to be individually downloaded by each build daemon.
    Avoid this by updating Mirrors.masterlist in the clean rule.
    Closes: #460389

 -- Joey Hess <joeyh@debian.org>  Sat, 12 Jan 2008 13:56:15 -0500

choose-mirror (2.20) unstable; urgency=low

  * Rebuild with latest Mirrors.masterlist. (Particularly for armel.)

  [ Updated translations ]
  * Amharic (am.po) by tegegne tefera
  * Korean (ko.po) by Changwoo Ryu
  * Malayalam (ml.po) by Praveen
  * Panjabi (pa.po) by A S Alam
  * Romanian (ro.po) by Eddy Petrișor
  * Slovak (sk.po) by Ivan Masár

 -- Joey Hess <joeyh@debian.org>  Thu, 10 Jan 2008 13:41:21 -0500
