@@ -5,8 +5,9 @@ choose-mirror (2.24) UNRELEASED; urgency=low
       saxutils.py
     - drop build dependency on python-xml
   * Remove PREFERRED_DISTRIBUTION; has been replaced by /etc/default_release.
+  * Improved version of the script used to sort the mirror country list.
 
- -- Frans Pop <fjp@debian.org>  Mon, 17 Mar 2008 00:19:16 +0100
+ -- Frans Pop <fjp@debian.org>  Sun, 06 Apr 2008 11:22:41 +0200
 
 choose-mirror (2.23) unstable; urgency=low
 
